fix row gap for skills at page 2

--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -10,7 +10,7 @@
 .icons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  row-gap: 1ch;
+  row-gap: 2rem;
   column-gap: 3rem;
 }
 
